--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
   allow_failures:
     - python: nightly
 install:
-- pip install pytest-cov coverage coveralls
+- pip install pytest-cov coverage coveralls mypy pylint
 - python setup.py install
 script:
 # (1) No errors in linter
