--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ pandas = ">=0.24"
 requests = "^2.20"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^18.3-alpha.0", allows-prereleases = true}
+black = {version = "^18.3-alpha.0", allow-prereleases = true}
 coverage = "^4.5"
 coveralls = "^1.9"
 mypy = "^0.750.0"
