--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "sncf-cli"
 # https://github.com/python-poetry/poetry/issues/140
-version = "0.8.1"
+version = "0.8.2"
 description = "Search SNCF journeys from the CLI."
 authors = ["Yann Feunteun, Maxime Mouchet"]
 license = "MIT"
@@ -36,10 +36,10 @@ pandas = ">=0.24"
 requests = "^2.20"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^18.3-alpha.0", allow-prereleases = true}
+black = {version = "^19.10b0", allow-prereleases = true}
 coverage = "^4.5"
 coveralls = "^1.9"
-mypy = "^0.750.0"
+mypy = "^0.761.0"
 # https://github.com/PyCQA/pylint/issues/617
 pylint = { git = "https://github.com/PyCQA/pylint.git", branch = "master" }
 pytest = "^5.3"
