--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dateparser = "^0.7"
 geopy = "^1.20"
 pandas = ">=0.24"
 requests = "^2.20"
+faker = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^19.10b0", allow-prereleases = true}
