--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.poetry]
 name = "sncf-cli"
 # https://github.com/python-poetry/poetry/issues/140
+# => Support automatic versioning setuptools_scm-style?
 version = "0.8.4"
 description = "Search SNCF journeys from the CLI."
 authors = ["Yann Feunteun, Maxime Mouchet"]
@@ -19,30 +20,28 @@ classifiers=[
 ]
 keywords = ["sncf", "train", "tgv", "cli"]
 
-# From the old setup.py
-# Seems it is not necessary anymore
-# package_data={
-#         'locomotive': ['py.typed', '*.csv', '*.mustache'],
-#     },
-
 [tool.poetry.dependencies]
 python = "^3.6"
 attrs = "^19.3"
 chevron = "^0.13"
 click = "^7.0"
 dateparser = "^0.7"
+faker = "^3.0.0"
 geopy = "^1.20"
 pandas = ">=0.24"
 requests = "^2.20"
-faker = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
+# https://github.com/python-poetry/poetry/issues/649
+# => This is required because there are no release versions of black at all.
 black = {version = "^19.10b0", allow-prereleases = true}
 coverage = "^4.5"
 coveralls = "^1.9"
 mypy = "^0.761.0"
 # https://github.com/PyCQA/pylint/issues/617
-pylint = { git = "https://github.com/PyCQA/pylint.git", branch = "master" }
+# => Search pylint configuration in setup.cfg and pyproject.toml
+# => This will be merged in pylint 2.5.0
+pylint = { git = "https://github.com/PyCQA/pylint.git", rev = "3fc8c98" }
 pytest = "^5.3"
 pytest-cov = "^2.8"
 
