--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ mypy = "^0.761.0"
 pylint = { git = "https://github.com/PyCQA/pylint.git", rev = "3fc8c98" }
 pytest = "^5.3"
 pytest-cov = "^2.8"
+pre-commit = "^1.20.0"
 
 [tool.poetry.scripts]
 sncf-cli = 'locomotive.cli:cli'
