--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
   rev: v0.761
   hooks:
     - id: mypy
+      exclude: ^tests/.*
 
 - repo: https://github.com/pre-commit/mirrors-pylint
   rev: v2.4.4 # TODO: Update to v2.5.0 when available (for pyproject.toml)
