--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Run tests
       run: poetry run pytest --cov=locomotive
 
-    - name: Uploade coverage
+    - name: Upload coverage
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: poetry run coveralls
