--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "sncf-cli"
 # https://github.com/python-poetry/poetry/issues/140
 # => Support automatic versioning setuptools_scm-style?
-version = "0.8.5"
+version = "v0.8.6"
 description = "Search SNCF journeys from the CLI."
 authors = ["Yann Feunteun, Maxime Mouchet"]
 license = "MIT"
