--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dateparser = "^0.7"
 faker = "^3.0.0"
 geopy = "^1.20"
 requests = "^2.20"
+tableformatter = "^0.1.4"
 
 [tool.poetry.dev-dependencies]
 # https://github.com/python-poetry/poetry/issues/649
