--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ requests = "^2.20"
 tableformatter = "^0.1.4"
 text-unidecode = "^1.3"
 py-money = "^0.4.0"
+colored = "^1.4.2"
 
 [tool.poetry.dev-dependencies]
 # https://github.com/python-poetry/poetry/issues/649
