--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers=[
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3"
 ]
-keywords = ["sncf", "train", "tgv", "cli"]
+keywords = ["api", "cli", "sncf", "train", "france", "tgv", "ter"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
