--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,10 +1,11 @@
 version = 1
 
-test_patterns = [
+test_patterns  = [
   "/tests/**"
 ]
 
 exclude_patterns = [
+  "/docs/**",
   "/locomotive/data/**"
 ]
 
