Project: move isort config to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,16 @@ omit = [
     "locomotive/cli/templates/*"
 ]
 
+[tool.isort]
+# https://github.com/timothycrosley/isort/issues/694
+# => Interopability with black
+# => https://github.com/psf/black#how-black-wraps-lines
+force_grid_wrap = 0
+include_trailing_comma = true
+multi_line_output = 3
+use_parentheses = true
+line_length = 88
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
