--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,10 @@ repos:
   rev: 4.3.21
   hooks:
   - id: isort
+    additional_dependencies: [toml]
 
 - repo: https://github.com/psf/black
-  rev: stable
+  rev: 19.10b0
   hooks:
     - id: black
 
