--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ pytest = "^5.3"
 pytest-cov = "^2.8"
 pre-commit = "^1.20.0"
 sphinx = "^2.3.1"
+sphinx-click = "^2.3.1"
 
 [tool.poetry.scripts]
 locomotive = 'locomotive.cli:cli'
