--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ tableformatter = "^0.1.4"
 text-unidecode = "^1.3"
 py-money = "^0.4.0"
 colored = "^1.4.2"
+tqdm = "^4.42.1"
+pendulum = "^2.0.5"
 
 [tool.poetry.dev-dependencies]
 # https://github.com/python-poetry/poetry/issues/649
