--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,18 +24,18 @@ keywords = ["api", "cli", "sncf", "train", "france", "tgv", "ter"]
 [tool.poetry.dependencies]
 python = "^3.6"
 attrs = "^19.3"
-chevron = "^0.13"
+colored = "^1.4.2"
 click = "^7.0"
 dateparser = "^0.7"
 faker = "^3.0.0"
 geopy = "^1.20"
+jinja2 = "^2.11.1"
+pendulum = "^2.0.5"
+py-money = "^0.4.0"
 requests = "^2.20"
 tableformatter = "^0.1.4"
 text-unidecode = "^1.3"
-py-money = "^0.4.0"
-colored = "^1.4.2"
 tqdm = "^4.42.1"
-pendulum = "^2.0.5"
 
 [tool.poetry.dev-dependencies]
 # https://github.com/python-poetry/poetry/issues/649
