--- a/.github/workflows/api_gc.yml
+++ b/.github/workflows/api_gc.yml
@@ -3,8 +3,8 @@ name: gc
 on:
   push:
     branches: ['master']
-  schedule:
-    - cron: '30 18 * * *'
+  # schedule:
+  #   - cron: '30 18 * * *'
 
 jobs:
   build:
