--- a/.github/workflows/api_oui_v3.yml
+++ b/.github/workflows/api_oui_v3.yml
@@ -3,8 +3,8 @@ name: oui_v3
 on:
   push:
     branches: ['master']
-  schedule:
-    - cron: '30 18 * * *'
+  # schedule:
+  #   - cron: '30 18 * * *'
 
 jobs:
   build:
